[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Евгения Ольшанова <olshanova1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.scripts]
say-hello = "project.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
